# multirobots_sim

./: .gitattributes  .gitignore  .gitmodules
Docker/: Dockerfile  docker_run.sh
multirobots_ws/src/QGroundControl.AppImage/: QGroundControl.AppImage
multirobots_ws/src/QGroundControl.AppImage/squashfs-root/: QGroundControl
multirobots_ws/src/QGroundControl.AppImage/squashfs-root/Qt/libs/: libQt5Charts.so.5  libQt5DBus.so.5  libQt5Location.so.5  libQt5Multimedia.so.5  libQt5MultimediaQuick.so.5  libQt5Network.so.5  libQt5OpenGL.so.5  libQt5Positioning.so.5  libQt5PositioningQuick.so.5  libQt5PrintSupport.so.5  libQt5QmlModels.so.5  libQt5Sql.so.5  (+13 more)
multirobots_ws/src/gazebo_sim/: package.xml  setup.py
multirobots_ws/src/gazebo_sim/gazebo_sim/: px4_teleop.py  summit_teleop.py
multirobots_ws/src/gazebo_sim/launch/: multiple_spawn_px4.launch.py  multiple_spawn_summit.launch.py  multirobots_simu.launch.py  px4_simu.launch.py  spawn_px4.launch.py  spawn_summit.launch.py
multirobots_ws/src/gazebo_sim/rviz/: summit_xl_1.rviz
multirobots_ws/src/gazebo_sim/urdf/: terrain.urdf  terrain.urdf.xacro
multirobots_ws/src/gazebo_sim/urdf/meshes/: terrain.dae  terrain3.dae
multirobots_ws/src/gazebo_sim/worlds/: forest.sdf  forest.world  forest2.sdf
multirobots_ws/src/summit_xl_description/: CMakeLists.txt  package.xml
multirobots_ws/src/summit_xl_description/config/: summit_control.yaml
multirobots_ws/src/summit_xl_description/robots/: summit_xl_std.urdf  summit_xl_std.urdf.xacro
multirobots_ws/src/summit_xl_description/urdf/bases/: summit_xl_base.gazebo.xacro
