<?xml version="1.0"?>
<package format="3">
  <name>summit_xl_description</name>
  <version>2.3.0</version>
  <description> URDF description of the Summit XL and Summit XL HL and omni versions </description>

  <url type="website">http://ros.org/wiki/summit_xl_description</url>
  <url type="repository">https://github.com/RobotnikAutomation/summit_xl_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/summit_xl_common/issues</url>

  <author email="rguzman@robotnik.es">Roberto Guzmán</author>
  <author email="rnavarro@robotnik.es">Román Navarro</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <maintainer email="asoriano@robotnik.es">Angel Soriano</maintainer>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>
  <maintainer email="dredo@robotnik.es">David Redó</maintainer>
  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>
  <maintainer email="mbosch@robotnik.es">Marc Bosch</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
 
  <license>BSD</license>

  <depend>robotnik_sensors</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>



